@@ -31,6 +31,7 @@ Changes between 2.1.3 and 2.2.0
 - fix compatibility with twisted/trial-11.1.0 use cases
 - simplify Node.listchain
 - simplify junitxml output code by relying on py.xml
+- add support for skip properties on unittest classes and functions
 
 Changes between 2.1.2 and 2.1.3
 ----------------------------------------
